--- a/src/Views/RevisionFiles.axaml
+++ b/src/Views/RevisionFiles.axaml
@@ -17,17 +17,7 @@
 
     <!-- File Tree -->
     <Border Grid.Column="0" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1" Background="{DynamicResource Brush.Contents}">
-      <v:RevisionFileTreeView Revision="{Binding Commit.SHA}" ContextRequested="OnRevisionFileTreeViewContextRequested">
-        <v:RevisionFileTreeView.Resources>
-          <DataTemplate x:Key="RevisionFileTreeNodeTemplate" DataType="v:RevisionFileTreeNode">
-            <Grid HorizontalAlignment="Stretch" Height="24" ColumnDefinitions="Auto,*">
-              <Path Grid.Column="0" Classes="folder_icon" Width="14" Height="14" Margin="0,2,0,0" IsVisible="{Binding IsFolder}" Fill="Goldenrod" VerticalAlignment="Center"/>
-              <Path Grid.Column="0" Width="14" Height="14" IsVisible="{Binding !IsFolder}" Data="{StaticResource Icons.File}" VerticalAlignment="Center"/>
-              <TextBlock Grid.Column="1" Classes="monospace" Text="{Binding Name}" Margin="6,0,0,0"/>
-            </Grid>
-          </DataTemplate>
-        </v:RevisionFileTreeView.Resources>
-      </v:RevisionFileTreeView>
+      <v:RevisionFileTreeView Revision="{Binding Commit.SHA}"/>
     </Border>
 
     <GridSplitter Grid.Column="1"
