--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1094,7 +1094,7 @@
     </Style>
   </Style>
   
-  <Style Selector="ToggleButton.change_tree_folder">
+  <Style Selector="ToggleButton.folder">
     <Setter Property="Margin" Value="0" />
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="IsHitTestVisible" Value="False"/>
@@ -1106,9 +1106,8 @@
                 HorizontalAlignment="Left"
                 VerticalAlignment="Center">
           <Path x:Name="ChevronPath"
-                Margin="0,2,0,0"
                 Data="{StaticResource Icons.Folder.Fill}"
-                Fill="Goldenrod"
+                Fill="{TemplateBinding Foreground}"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"/>
         </Border>
@@ -1291,12 +1290,6 @@
       <Setter Property="Background" Value="{DynamicResource Brush.Accent}" />
       <Setter Property="Opacity" Value=".65"/>
     </Style>
-  </Style>
-  <Style Selector="TreeViewItem[IsExpanded=True] Path.folder_icon">
-    <Setter Property="Data" Value="{StaticResource Icons.Folder.Open}"/>
-  </Style>
-  <Style Selector="TreeViewItem[IsExpanded=False] Path.folder_icon">
-    <Setter Property="Data" Value="{StaticResource Icons.Folder.Fill}"/>
   </Style>
 
   <Style Selector="NumericUpDown">
