--- a/src/Views/Welcome.axaml
+++ b/src/Views/Welcome.axaml
@@ -94,18 +94,22 @@
                     PointerReleased="OnPointerReleasedOnTreeNode"
                     DoubleTapped="OnDoubleTappedTreeNode"
                     ClipToBounds="True">
-                <Path Grid.Column="0" Width="12" Height="12" Margin="0,0,8,0"
+                <Path Grid.Column="0" Width="12" Height="12" Margin="0,0,4,0"
                       Fill="{Binding Bookmark, Converter={x:Static c:BookmarkConverters.ToBrush}}"
                       StrokeThickness="{Binding Bookmark, Converter={x:Static c:BookmarkConverters.ToStrokeThickness}}"
                       Stroke="{DynamicResource Brush.FG1}"
                       HorizontalAlignment="Left"
                       Data="{StaticResource Icons.Bookmark}"
                       IsVisible="{Binding IsRepository}"/>
-                <Path Grid.Column="0" Classes="folder_icon"
-                      Width="12" Height="12" Margin="0,2,8,0"
-                      Fill="{DynamicResource Brush.FG1}"
-                      HorizontalAlignment="Left"
-                      IsVisible="{Binding !IsRepository}"/>
+
+                <ToggleButton Grid.Column="0"
+                              Classes="folder"
+                              Focusable="False"
+                              Width="12" Height="12"
+                              Margin="0,0,4,0"
+                              Foreground="{DynamicResource Brush.FG1}"
+                              IsChecked="{Binding IsExpanded}"
+                              IsVisible="{Binding !IsRepository}"/>
 
                 <TextBlock Grid.Column="1" Classes="monospace" VerticalAlignment="Center" Text="{Binding Name}"/>
                 <TextBlock Grid.Column="2"
