--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -457,8 +457,10 @@
   <x:String x:Key="Text.Repository.Resolve" xml:space="preserve">解決衝突</x:String>
   <x:String x:Key="Text.Repository.Search" xml:space="preserve">查詢提交</x:String>
   <x:String x:Key="Text.Repository.Search.By" xml:space="preserve">查詢方式</x:String>
-  <x:String x:Key="Text.Repository.Search.ByBaseInfo" xml:space="preserve">摘要</x:String>
   <x:String x:Key="Text.Repository.Search.ByFile" xml:space="preserve">檔案</x:String>
+  <x:String x:Key="Text.Repository.Search.ByMessage" xml:space="preserve">提交資訊</x:String>
+  <x:String x:Key="Text.Repository.Search.BySHA" xml:space="preserve">提交指紋</x:String>
+  <x:String x:Key="Text.Repository.Search.ByUser" xml:space="preserve">作者及提交者</x:String>
   <x:String x:Key="Text.Repository.SearchBranchTag" xml:space="preserve">快速查找分支、標籤</x:String>
   <x:String x:Key="Text.Repository.Statistics" xml:space="preserve">提交統計</x:String>
   <x:String x:Key="Text.Repository.Submodules" xml:space="preserve">子模組列表</x:String>
