--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -169,6 +169,9 @@
     <Setter Property="MaxWidth" Value="1024"/>
     <Setter Property="MaxHeight" Value="768"/>
   </Style>
+  
+  <Style Selector="Grid.repository_leftpanel">
+  </Style>
 
   <Style Selector="Path">
     <Setter Property="Fill" Value="{DynamicResource Brush.FG1}"/>
@@ -178,6 +181,7 @@
   </Style>
   <Style Selector="Path[IsVisible=True].rotating">
     <Setter Property="Opacity" Value="0"/>
+    <Setter Property="Data" Value="{StaticResource Icons.Loading}"/>
     <Style.Animations>
       <Animation Duration="0:0:1" IterationCount="Infinite">
         <KeyFrame Cue="0%">
@@ -193,6 +197,7 @@
   </Style>
   <Style Selector="Path[IsVisible=True].waiting">
     <Setter Property="Opacity" Value="0"/>
+    <Setter Property="Data" Value="{StaticResource Icons.Waiting}"/>
     <Style.Animations>
       <Animation Duration="0:0:1" IterationCount="Infinite">
         <KeyFrame Cue="0%">
@@ -1190,6 +1195,17 @@
   </Style>
   <Style Selector="ToggleButton.toggle_untracked:pointerover /template/ Path#PART_IndicatorIcon">
     <Setter Property="Opacity" Value="1"/>
+  </Style>
+  
+  <Style Selector="Slider">
+    <Style.Resources>
+      <Thickness x:Key="SliderTopHeaderMargin">0,0,0,4</Thickness>
+      <GridLength x:Key="SliderPreContentMargin">0</GridLength>
+      <GridLength x:Key="SliderPostContentMargin">0</GridLength>
+      <CornerRadius x:Key="SliderThumbCornerRadius">8</CornerRadius>
+      <x:Double x:Key="SliderHorizontalThumbWidth">16</x:Double>
+      <x:Double x:Key="SliderHorizontalThumbHeight">16</x:Double>
+    </Style.Resources>
   </Style>
 
   <Style Selector="TabItem">
