--- a/src/Views/Apply.axaml
+++ b/src/Views/Apply.axaml
@@ -5,7 +5,6 @@
              xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:v="using:SourceGit.Views"
-             xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.Apply"
              x:DataType="vm:Apply">
@@ -20,7 +19,7 @@
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.Apply.File}"/>
       <TextBox Grid.Row="0" Grid.Column="1"
-               x:Name="txtPatchFile"
+               x:Name="TxtPatchFile"
                Height="28"
                CornerRadius="3"
                Watermark="{DynamicResource Text.Apply.File.Placeholder}"
