--- a/src/Views/CreateBranch.axaml
+++ b/src/Views/CreateBranch.axaml
@@ -15,11 +15,11 @@
                Classes="bold"
                Text="{DynamicResource Text.CreateBranch.Title}"/>
     <Grid Margin="0,16,0,0" RowDefinitions="32,32,32,32" ColumnDefinitions="140,*">
-      <TextBlock Grid.Column="0"
+      <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.CreateBranch.BasedOn}"/>
-      <ContentControl Grid.Column="1" Content="{Binding BasedOn}">
+      <ContentControl Grid.Row="0" Grid.Column="1" Content="{Binding BasedOn}">
         <ContentControl.DataTemplates>
           <DataTemplate DataType="m:Branch">
             <StackPanel Orientation="Horizontal">
