--- a/src/Views/GitFlowFinish.axaml
+++ b/src/Views/GitFlowFinish.axaml
@@ -2,9 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
-             xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="SourceGit.Views.GitFlowFinish"
              x:DataType="vm:GitFlowFinish">
@@ -22,11 +20,11 @@
                Text="{DynamicResource Text.GitFlow.FinishHotfix}"
                IsVisible="{Binding IsHotfix}"/>
     <Grid Margin="0,16,0,0" RowDefinitions="32,32" ColumnDefinitions="150,*">
-      <TextBlock Grid.Column="0"
+      <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.GitFlow.FinishTarget}"/>
-      <StackPanel Grid.Column="1" Orientation="Horizontal">
+      <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
         <Path Width="14" Height="14" Data="{StaticResource Icons.Branch}"/>
         <TextBlock Text="{Binding Branch.Name}" Margin="8,0,0,0"/>
       </StackPanel>
