--- a/src/Views/ImageDiffView.axaml
+++ b/src/Views/ImageDiffView.axaml
@@ -3,7 +3,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:m="using:SourceGit.Models"
-             xmlns:vm="using:SourceGit.ViewModels"
              xmlns:v="using:SourceGit.Views"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -157,16 +156,7 @@
                   Margin="0"
                   MinHeight="0"
                   Foreground="{DynamicResource Brush.Border1}"
-                  Value="0.5">
-            <Slider.Resources>
-              <Thickness x:Key="SliderTopHeaderMargin">0,0,0,4</Thickness>
-              <GridLength x:Key="SliderPreContentMargin">0</GridLength>
-              <GridLength x:Key="SliderPostContentMargin">0</GridLength>
-              <CornerRadius x:Key="SliderThumbCornerRadius">8</CornerRadius>
-              <x:Double x:Key="SliderHorizontalThumbWidth">16</x:Double>
-              <x:Double x:Key="SliderHorizontalThumbHeight">16</x:Double>
-            </Slider.Resources>
-          </Slider>
+                  Value="0.5"/>
 
           <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Top" Margin="8,0,0,0">
             <TextBlock Classes="monospace" Text="NEW"/>
