--- a/src/Views/PopupRunningStatus.axaml
+++ b/src/Views/PopupRunningStatus.axaml
@@ -6,23 +6,23 @@
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.PopupRunningStatus"
-             x:Name="me">
+             x:Name="ThisControl">
   <StackPanel Orientation="Vertical">
     <Rectangle Height="1" HorizontalAlignment="Stretch" Fill="{DynamicResource Brush.Border1}" />
     
     <StackPanel Orientation="Horizontal" Margin="0,8">
-      <ContentPresenter x:Name="icon" Width="12" Height="12"/>
+      <ContentPresenter x:Name="Icon" Width="12" Height="12"/>
       <TextBlock Margin="6,0,0,0" FontSize="14" FontWeight="Bold" Text="{DynamicResource Text.Running}"/>
     </StackPanel>
     
-    <TextBlock x:Name="txtDesc"
+    <TextBlock x:Name="TxtDesc"
                HorizontalAlignment="Stretch"
                TextWrapping="Wrap"
                FontSize="{Binding Source={x:Static vm:Preference.Instance}, Path=DefaultFontSize, Converter={x:Static c:DoubleConverters.Decrease}}"
                FontStyle="Italic"
-               Text="{Binding #me.Description}"/>
+               Text="{Binding #ThisControl.Description}"/>
     
-    <ProgressBar x:Name="progressBar"
+    <ProgressBar x:Name="ProgressBar"
                  Margin="0,8,0,0"
                  HorizontalAlignment="Stretch"
                  Background="{DynamicResource Brush.FG2}" Foreground="{DynamicResource Brush.Accent}"
