--- a/src/Views/RenameBranch.axaml
+++ b/src/Views/RenameBranch.axaml
@@ -2,10 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:v="using:SourceGit.Views"
-             xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.RenameBranch"
              x:DataType="vm:RenameBranch">
@@ -14,11 +12,11 @@
                Classes="bold"
                Text="{DynamicResource Text.RenameBranch}"/>
     <Grid Margin="0,16,0,0" RowDefinitions="32,32" ColumnDefinitions="120,*">
-      <TextBlock Grid.Column="0"
+      <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.RenameBranch.Target}"/>
-      <StackPanel Grid.Column="1" Orientation="Horizontal">
+      <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Horizontal">
         <Path Width="14" Height="14" Data="{StaticResource Icons.Branch}"/>
         <TextBlock Text="{Binding Target.Name}" Margin="8,0,0,0" />
       </StackPanel>
