--- a/src/Views/StandaloneCommitMessageEditor.axaml
+++ b/src/Views/StandaloneCommitMessageEditor.axaml
@@ -2,10 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                    xmlns:vm="using:SourceGit.ViewModels"
                     xmlns:v="using:SourceGit.Views"
                     mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-                    x:Class="SourceGit.Views.CodeEditor"
+                    x:Class="SourceGit.Views.StandaloneCommitMessageEditor"
                     Icon="/App.ico"
                     Title="{DynamicResource Text.CodeEditor}"
                     Width="800"
