--- a/src/Views/StashChanges.axaml
+++ b/src/Views/StashChanges.axaml
@@ -2,10 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:v="using:SourceGit.Views"
-             xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="450"
              x:Class="SourceGit.Views.StashChanges"
              x:DataType="vm:StashChanges">
@@ -14,8 +12,11 @@
                Classes="bold"
                Text="{DynamicResource Text.Stash.Title}"/>
     <Grid Margin="8,16,0,0" RowDefinitions="32,Auto" ColumnDefinitions="120,*">
-      <TextBlock Grid.Column="0" HorizontalAlignment="Right" Margin="8,0" Text="{DynamicResource Text.Stash.Message}"/>
-      <TextBox Grid.Column="1" 
+      <TextBlock Grid.Row="0" Grid.Column="0" 
+                 HorizontalAlignment="Right" 
+                 Margin="8,0" 
+                 Text="{DynamicResource Text.Stash.Message}"/>
+      <TextBox Grid.Row="0" Grid.Column="1" 
                Height="26" 
                CornerRadius="3" 
                Text="{Binding Message, Mode=TwoWay}"
