--- a/src/Views/ChangeCollectionView.axaml
+++ b/src/Views/ChangeCollectionView.axaml
@@ -50,6 +50,7 @@
                             Classes="folder"
                             Focusable="False"
                             Width="14" Height="14"
+                            Margin="0,1,0,0"
                             Foreground="Goldenrod"
                             IsChecked="{Binding IsExpanded}"
                             IsVisible="{Binding IsFolder}"/>
