--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -160,11 +160,13 @@
             
             <DataGridTemplateColumn.CellTemplate>
               <DataTemplate x:DataType="{x:Type m:Commit}">
-                <TextBlock Classes="monospace" 
-                           Text="{Binding CommitterTimeStr}"
-                           Margin="8,0"
-                           Opacity="{Binding IsMerged, Converter={x:Static c:BoolConverters.HalfIfFalse}}"
-                           FontWeight="{Binding IsCurrentHead, Converter={x:Static c:BoolConverters.BoldIfTrue}}"/>
+                <Border Background="Transparent" ToolTip.Tip="{Binding CommitterTimeFromNowString}">
+                  <TextBlock Classes="monospace"
+                             Text="{Binding CommitterTimeStr}"
+                             Margin="8,0"
+                             Opacity="{Binding IsMerged, Converter={x:Static c:BoolConverters.HalfIfFalse}}"
+                             FontWeight="{Binding IsCurrentHead, Converter={x:Static c:BoolConverters.BoldIfTrue}}"/>
+                </Border>
               </DataTemplate>
             </DataGridTemplateColumn.CellTemplate>
           </DataGridTemplateColumn>
