--- a/src/Views/WelcomeToolbar.axaml
+++ b/src/Views/WelcomeToolbar.axaml
@@ -6,27 +6,24 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.WelcomeToolbar"
              x:DataType="vm:Welcome">
-  <StackPanel Orientation="Horizontal" Margin="4,0,0,0">
-    <Button Classes="icon_button" Width="32" Command="{Binding Clone}" ToolTip.Tip="{DynamicResource Text.Welcome.Clone}">
-      <Path Width="13" Height="13" Data="{StaticResource Icons.Pull}"/>
-    </Button>
+  <Grid ColumnDefinitions="Auto,*,Auto" Margin="4,0">
+    <StackPanel Grid.Column="0" Orientation="Horizontal">
+      <Button Classes="icon_button" Width="32" Command="{Binding Clone}" ToolTip.Tip="{DynamicResource Text.Welcome.Clone}">
+        <Path Width="13" Height="13" Data="{StaticResource Icons.Pull}"/>
+      </Button>
 
-    <Button Classes="icon_button" Width="32" Click="OpenLocalRepository" ToolTip.Tip="{DynamicResource Text.Welcome.OpenOrInit}">
-      <Path Width="14" Height="14" Data="{StaticResource Icons.Folder.Open}" Margin="0,2,0,0"/>
-    </Button>
+      <Button Classes="icon_button" Width="32" Click="OpenLocalRepository" ToolTip.Tip="{DynamicResource Text.Welcome.OpenOrInit}">
+        <Path Width="14" Height="14" Data="{StaticResource Icons.Folder.Open}" Margin="0,2,0,0"/>
+      </Button>
 
-    <Button Classes="icon_button" Width="32" Command="{Binding OpenTerminal}" ToolTip.Tip="{DynamicResource Text.Welcome.OpenTerminal}">
-      <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
-    </Button>
+      <Button Classes="icon_button" Width="32" Command="{Binding OpenTerminal}" ToolTip.Tip="{DynamicResource Text.Welcome.OpenTerminal}">
+        <Path Width="13" Height="13" Data="{StaticResource Icons.Terminal}"/>
+      </Button>      
+    </StackPanel>
 
-    <Rectangle Width="1" Height="16"
-               Margin="4,0"
-               VerticalAlignment="Center"
-               Fill="{DynamicResource Brush.Border2}"/>
-
-    <Button Classes="icon_button" Width="32" Command="{Binding AddRootNode}" ToolTip.Tip="{DynamicResource Text.Welcome.AddRootFolder}">
+    <Button Grid.Column="2" Classes="icon_button" Width="32" Command="{Binding AddRootNode}" ToolTip.Tip="{DynamicResource Text.Welcome.AddRootFolder}">
       <Path Width="14" Height="14" Margin="0,2,0,0" Data="{StaticResource Icons.Folder.Add}"/>
     </Button>
-  </StackPanel>
+  </Grid>
 </UserControl>
 
