--- a/src/Resources/Styles.axaml
+++ b/src/Resources/Styles.axaml
@@ -1098,6 +1098,31 @@
       <Setter Property="Data" Value="M 0 4 L 8 4 L 4 8 Z" />
     </Style>
   </Style>
+
+  <Style Selector="ToggleButton.time_display_mode">
+    <Setter Property="Margin" Value="0" />
+    <Setter Property="Background" Value="Transparent"/>
+    <Setter Property="Template">
+      <ControlTemplate>
+        <Border Background="Transparent"
+                Width="{TemplateBinding Width}"
+                Height="{TemplateBinding Height}"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Center">
+          <Path x:Name="ChevronPath"
+                Data="{StaticResource Icons.Calender}"
+                Fill="{DynamicResource TreeViewItemForeground}"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Opacity="0.65"/>
+        </Border>
+      </ControlTemplate>
+    </Setter>
+
+    <Style Selector="^:checked /template/ Path#ChevronPath">
+      <Setter Property="Data" Value="{StaticResource Icons.Stopwatch}" />
+    </Style>
+  </Style>
   
   <Style Selector="ToggleButton.folder">
     <Setter Property="Margin" Value="0" />
