--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -1,6 +1,6 @@
 <ResourceDictionary xmlns="https://github.com/avaloniaui" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <ResourceDictionary.MergedDictionaries>
-    <ResourceInclude Source="en_US.axaml"/>
+    <ResourceInclude Source="avares://SourceGit/Resources/Locales/en_US.axaml"/>
   </ResourceDictionary.MergedDictionaries>
   <x:String x:Key="Text.About" xml:space="preserve">關於軟體</x:String>
   <x:String x:Key="Text.About.Menu" xml:space="preserve">關於本軟體</x:String>
@@ -344,6 +344,15 @@
   <x:String x:Key="Text.PageTabBar.Tab.CopyPath" xml:space="preserve">複製倉庫路徑</x:String>
   <x:String x:Key="Text.PageTabBar.Welcome.Title" xml:space="preserve">新標籤頁</x:String>
   <x:String x:Key="Text.Paste" xml:space="preserve">貼上</x:String>
+  <x:String x:Key="Text.Period.JustNow" xml:space="preserve">剛剛</x:String>
+  <x:String x:Key="Text.Period.MinutesAgo" xml:space="preserve">{0}分鐘前</x:String>
+  <x:String x:Key="Text.Period.HoursAgo" xml:space="preserve">{0}小時前</x:String>
+  <x:String x:Key="Text.Period.Yesterday" xml:space="preserve">昨天</x:String>
+  <x:String x:Key="Text.Period.DaysAgo" xml:space="preserve">{0}天前</x:String>
+  <x:String x:Key="Text.Period.LastMonth" xml:space="preserve">上個月</x:String>
+  <x:String x:Key="Text.Period.MonthsAgo" xml:space="preserve">{0}個月前</x:String>
+  <x:String x:Key="Text.Period.LastYear" xml:space="preserve">一年前</x:String>
+  <x:String x:Key="Text.Period.YearsAgo" xml:space="preserve">{0}年前</x:String>
   <x:String x:Key="Text.Preference" xml:space="preserve">偏好設定</x:String>
   <x:String x:Key="Text.Preference.Appearance" xml:space="preserve">外觀配置</x:String>
   <x:String x:Key="Text.Preference.Appearance.DefaultFont" xml:space="preserve">預設字型</x:String>
